Move to namepath, update snaps
Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>